# health-api/routes/index.js
@@ -1,7 +1,8 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
 
-router.use('/medicines', require('./medicines'));
-router.use('/ailments', require('./ailments'));
+router.use("/medicines", require("./medicines"));
+router.use("/ailments", require("./ailments"));
+router.use("/auth", require("./auth"));
 
 module.exports = router;
